@@ -12,6 +12,16 @@
 	<url type="donation">https://www.parlatype.org/donate.html</url>
 
 	<releases>
+		<release version="3.0" date="2021-11-01">
+			<description>
+			<p>This release is for Parlatype 3.0.</p>
+			<ul>
+			<li>Automatic speech recognition: Prints recognized text from Parlatype (Linux only).</li>
+			<li>Fixed a crash if selecting a table.</li>
+			<li>Translation updates for Italian.</li>
+			</ul>
+			</description>
+		</release>
 		<release version="2.1" date="2020-06-21">
 			<description>
 			<p>This new release depends on Parlatype 2.1.</p>
